# volseg-editor

./: .gitattributes  LICENSE  README.md  annotation.json  compose.dev.yml  compose.prod.yml  compose.yml
backend/: .env  .env.dev  .env.development  .env.example  .env.prod  .env.production  .gitignore  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3b2dbc8d837f_volseg_entry_snapshot_filepath.py  f6da37c7dea9_create_initial_tables.py
backend/app/: main.py
backend/app/api/: health_check.py
backend/app/api/v1/: api.py  deps.py  tags.py
backend/app/core/: security.py  settings.py
backend/app/core/settings/: __init__.py  api_settings.py  base_settings.py  minio_settings.py  postgres_settings.py
backend/app/database/: session_manager.py
backend/app/database/alembic/: env.py
backend/app/database/models/: __init__.py  api_key_model.py  entry_model.py  role_model.py  share_link_model.py  user_model.py  view_model.py  volseg_entry_model.py
backend/app/middleware/: refresh_token_middleware.py
backend/app/models/: annotations.py
backend/app/repositories/: __init__.py  api_key_repository.py  base_repository.py  entry_repository.py  share_link_repository.py  user_repository.py
backend/app/services/: api_key_service.py  auth_service.py  entry_service.py  processing_service.py  share_link_service.py  storage_service.py  user_service.py  view_service.py  volseg_service.py
backend/docker/: .dockerignore  dockerfile.dev  dockerfile.migrations.prod  dockerfile.prod  dockerfile.seed.prod
backend/scripts/: migrate.sh
backend/tests/: conftest.py  test_api_keys.py  test_auth.py  test_entries.py  test_share_links.py  test_upload.py
backend/tools/db_seeding/: seed_database.py
(+267 files in other folders)
