[project]
name = "cellim-viewer-server"
version = "0.0.0"
description = "Server for CELLIM Viewer."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "celery[redis]>=5.5.2",
    "fastapi[standard]>=0.115.11",
    "httpx>=0.28.1",
    "minio>=7.2.15",
    "pydantic[email]>=2.10.6",
    "pydantic-settings>=2.8.1",
    "python-multipart>=0.0.20",
    "pyjwt>=2.10.1",
    "sqlalchemy>=2.0.40",
    "redis>=5.2.1",
    "oauthlib>=3.3.1",
    "requests-oauthlib>=2.0.0",
    "itsdangerous>=2.2.0",
    "alembic>=1.16.2",
]

[dependency-groups]
dev = [
    "coverage>=7.8.0",
    "faker>=37.1.0",
    "flower>=2.0.1",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.5",
    "typer>=0.15.2",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    # isort
    "I",
]

[tool.isort]
remove_unused = false
